<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Mudita Mail</string>
    <string name="shortcuts_title">Mudita Accounts</string>
    <string name="unread_widget_label">Mudita Unread</string>
    <string name="app_authors">The Mudita Dog Walkers</string>
    <string name="app_copyright_fmt">Copyright 2021-<xliff:g>%s</xliff:g> The Mudita Dog Walkers. Portions Copyright 2006-<xliff:g>%s</xliff:g> the Android Open Source Project.</string>
    <string name="source_code">Source code</string>
    <string name="app_license">Apache License, Version 2.0</string>
    <string name="about_project_title">Open Source Project</string>
    <string name="about_website_title">Website</string>
    <string name="user_forum_title">User forum</string>
    <string name="about_fediverse_title">Fediverse</string>
    <string name="about_twitter_title">Twitter</string>
    <string name="about_libraries">Libraries</string>
    <string name="license">License</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_loading_error">Couldn\'t load the changelog.</string>
    <string name="changelog_version_title">Version %s</string>
    <string name="changelog_recent_changes_title">What\'s new</string>
    <string name="changelog_show_recent_changes">Show recent changes when app was updated</string>
    <string name="changelog_snackbar_text">Find out what\'s new in this release</string>
    <string name="welcome_message_title">Welcome to Mudita Mail</string>
    <string name="accounts_welcome"><![CDATA[
<p>
Mudita Mail is a powerful free email client for Android.
</p><p>
Its improved features include:
</p>
<ul>
  <li>Push mail using IMAP IDLE</li>
  <li>Better performance</li>
  <li>Message refiling</li>
  <li>Email signatures</li>
  <li>Bcc-to-self</li>
  <li>Folder subscriptions</li>
  <li>All folder synchronization</li>
  <li>Return-address configuration</li>
  <li>Keyboard shortcuts</li>
  <li>Better IMAP support</li>
  <li>Saving attachments to SD</li>
  <li>Empty Trash</li>
  <li>Message sorting</li>
  <li>…and more</li>
</ul>
<p>
Please note that Mudita does not support most free Hotmail accounts and, like many mail clients, has
some quirks when talking to Microsoft Exchange.
</p><p>
Please submit bug reports, contribute new features and ask questions at
<a href="https://github.com/k9mail/k-9/">https://github.com/k9mail/k-9/</a>.
</p>
    ]]></string>
    <string name="default_signature">-- \nSent from my Android device with Mudita Mail. Please excuse my brevity.</string>
    <string name="account_delete_dlg_instructions_fmt">The account \"<xliff:g id="account">%s</xliff:g>\" will be removed from Mudita Mail.</string>
    <string name="authors">Authors</string>
    <string name="app_revision">Revision Information</string>
    <string name="read_messages_label">Read Emails</string>
    <string name="read_messages_desc">Allows this application to read your Emails.</string>
    <string name="delete_messages_label">Delete Emails</string>
    <string name="delete_messages_desc">Allows this application to delete your Emails.</string>
    <string name="about_title">About Mudita Mail</string>
    <string name="accounts_title">Accounts</string>
    <string name="folders_title">Folders</string>
    <string name="advanced">Advanced</string>
    <string name="compose_title_compose">Compose</string>
    <string name="compose_title_reply">Reply</string>
    <string name="compose_title_reply_all">Reply all</string>
    <string name="compose_title_forward">Forward</string>
    <string name="compose_title_forward_as_attachment">Forward as attachment</string>
    <string name="choose_account_title">Choose Account</string>
    <string name="choose_folder_title">Choose Folder</string>
    <string name="choose_folder_move_title">Move to…</string>
    <string name="choose_folder_copy_title">Copy to…</string>
    <string name="status_loading_account_folder">Poll <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_loading_account_folder_headers">Fetching headers <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_sending_account">Sending <xliff:g id="account">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_processing_account">Proc <xliff:g id="account">%s</xliff:g>:<xliff:g id="command">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="folder_progress">\u0020<xliff:g id="completed">%d</xliff:g>/<xliff:g id="total">%d</xliff:g></string>
    <string name="status_syncing_off">Syncing disabled</string>
    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_again_action">Send Again</string>
    <string name="empty_subject">Subject is empty, click again to send anyway</string>
    <string name="select_action">Select</string>
    <string name="deselect_action">Deselect</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="archive_action">Archive</string>
    <string name="spam_action">Spam</string>
    <string name="forward_action">Forward</string>
    <string name="forward_as_attachment_action">Forward as attachment</string>
    <string name="edit_as_new_message_action">Edit as new message</string>
    <string name="move_action">Move</string>
    <string name="move_to_drafts_action">Move to Drafts</string>
    <string name="single_message_options_action">Send…</string>
    <string name="refile_action">Refile…</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="check_mail_action">Check mail</string>
    <string name="check_all_mail_action">Check mail in all accounts</string>
    <string name="send_messages_action">Send messages</string>
    <string name="refresh_folders_action">Refresh folder list</string>
    <string name="filter_folders_action">Find folder</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="search_everywhere_action">Search everywhere</string>
    <string name="search_results">Search results</string>
    <string name="preferences_action">Settings</string>
    <string name="folders_action">Manage folders</string>
    <string name="account_settings_action">Account settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="send_alternate_action">Share</string>
    <string name="send_alternate_chooser_title">Choose sender</string>
    <string name="flag_action">Add star</string>
    <string name="unflag_action">Remove star</string>
    <string name="copy_action">Copy</string>
    <string name="show_headers_action">Show headers</string>
    <plurals name="copy_address_to_clipboard">
        <item quantity="one">Address copied to clipboard</item>
        <item quantity="other">Addresses copied to clipboard</item>
    </plurals>
    <string name="copy_subject_to_clipboard">Subject text copied to clipboard</string>
    <string name="message_view_theme_action_dark">Switch to dark theme</string>
    <string name="message_view_theme_action_light">Switch to light theme</string>
    <string name="mark_as_unread_action">Mark unread</string>
    <string name="read_receipt">Read receipt</string>
    <string name="read_receipt_enabled">Will request read receipt</string>
    <string name="read_receipt_disabled">Will not request read receipt</string>
    <string name="add_attachment_action">Add attachment</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
    <string name="about_action">About</string>
    <string name="prefs_title">Settings</string>
    <string name="general_no_subject">(No subject)</string>
    <string name="general_no_sender">No sender</string>
    <string name="status_loading_more">Loading messages\u2026</string>
    <string name="status_network_error">Connection error</string>
    <string name="status_invalid_id_error">Message not found</string>
    <string name="status_loading_error">Message loading error</string>
    <string name="load_more_messages_fmt">Load up
    to <xliff:g id="messages_to_load">%d</xliff:g> more</string>
    <string name="size_format_gigabytes">%.1f GB</string>
    <string name="size_format_megabytes">%.1f MB</string>
    <string name="size_format_kilobytes">%.1f kB</string>
    <string name="size_format_bytes">%d B</string>
    <string name="account_size_changed">Account \"<xliff:g id="account">%s</xliff:g>\" shrunk from <xliff:g id="oldSize">%s</xliff:g> to <xliff:g id="newSize">%s</xliff:g></string>
    <string name="compacting_account">Compacting account \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="notification_new_title">New mail</string>
    <plurals name="notification_new_messages_title">
        <item quantity="one"><xliff:g id="new_message_count">%d</xliff:g> new message</item>
        <item quantity="other"><xliff:g id="new_message_count">%d</xliff:g> new messages</item>
    </plurals>
    <string name="notification_new_one_account_fmt"><xliff:g id="unread_message_count">%d</xliff:g> Unread (<xliff:g id="account">%s</xliff:g>)</string>
    <string name="notification_additional_messages">+ <xliff:g id="additional_messages">%1$d</xliff:g> more on <xliff:g id="account">%2$s</xliff:g></string>
    <string name="notification_action_reply">Reply</string>
    <string name="notification_action_mark_as_read">Mark Read</string>
    <string name="notification_action_mark_all_as_read">Mark All Read</string>
    <string name="notification_action_delete">Delete</string>
    <string name="notification_action_delete_all">Delete All</string>
    <string name="notification_action_archive">Archive</string>
    <string name="notification_action_archive_all">Archive All</string>
    <string name="notification_action_spam">Spam</string>
    <string name="notification_certificate_error_title">Certificate error for <xliff:g id="account">%s</xliff:g></string>
    <string name="notification_certificate_error_text">Check your server settings</string>
    <string name="notification_authentication_error_title">Authentication failed</string>
    <string name="notification_authentication_error_text">Authentication failed for <xliff:g id="account">%s</xliff:g>. Update your server settings.</string>
    <string name="message_view_show_pictures_action">Show pictures</string>
    <string name="message_view_download_remainder">Download complete message</string>
    <string name="message_progress_text">Loading…</string>
    <string name="authentication_error_header">Authentication error occurred</string>
    <string name="authentication_error_primary_action">Authenticate again</string>
    <string name="authentication_error_action_close">Go to message list</string>
    <string name="account_setup_names_almost_there">Almost there</string>
    <string name="account_setup_names_additional_information">Add additional information about your inbox.</string>
    <string name="account_setup_names_name_your_inbox">Name your inbox</string>
    <string name="account_setup_names_display_name">Enter display name in the messages</string>
    <string name="account_setup_names_save">Save</string>
</resources>