<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/material_drawer_swipe_refresh"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.mikepenz.materialdrawer.widget.MaterialDrawerSliderView
            android:id="@+id/material_drawer_slider"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/material_drawer_button_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_pure"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/drawer_button_refresh_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/check_mail_action"
            android:padding="12dp"
            android:src="?attr/iconActionRefresh" />

        <ImageView
            android:id="@+id/drawer_button_refresh_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/check_all_mail_action"
            android:padding="12dp"
            android:src="@drawable/ic_refresh_all" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/drawer_button_manage_folders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/folders_action"
            android:padding="12dp"
            android:src="@drawable/ic_folder_manage" />

        <ImageView
            android:id="@+id/drawer_button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/preferences_action"
            android:padding="12dp"
            android:src="?attr/iconActionSettings" />
    </LinearLayout>

</LinearLayout>
