<?xml version="1.0" encoding="utf-8"?>
<com.fsck.k9.ui.messageview.MessageTopView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".messageview.MessageViewFragment">

    <com.fsck.k9.view.NonLockingScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="?attr/messageViewBackgroundColor"
            android:orientation="vertical">

            <!-- Header area -->
            <include layout="@layout/message_view_header" />

            <Button
                android:id="@+id/show_pictures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="16dp"
                android:layout_marginTop="4dip"
                android:layout_marginBottom="4dip"
                android:background="@color/transparent"
                android:drawableStart="@drawable/ic_show_picture"
                android:drawablePadding="4dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/message_view_show_pictures_action"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.fsck.k9.view.ToolableViewAnimator
                android:id="@+id/message_layout_animator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inAnimation="@anim/fade_in"
                android:outAnimation="@anim/fade_out"
                custom:previewInitialChild="1">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <ProgressBar
                        android:id="@+id/message_progress"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="false"
                        android:max="1000"
                        android:paddingTop="30dp"
                        android:paddingBottom="30dp"
                        tools:progress="300" />

                    <TextView
                        android:id="@+id/message_progress_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/message_progress"
                        android:layout_centerInParent="true"
                        android:text="@string/message_progress_text" />

                </RelativeLayout>

                <FrameLayout
                    android:id="@+id/message_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </com.fsck.k9.view.ToolableViewAnimator>

        </LinearLayout>

    </com.fsck.k9.view.NonLockingScrollView>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_pure"
        android:orientation="vertical">

        <Button
            android:id="@+id/download_remainder"
            style="@style/BaseButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/message_view_download_remainder"
            android:visibility="gone"
            tools:visibility="visible" />
    </FrameLayout>

</com.fsck.k9.ui.messageview.MessageTopView>
